...
                                    </view>
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="FXh-b7-PhO">
                                        <rect key="frame" x="0.0" y="350" width="374" height="282"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gDd-EJ-Qud" userLabel="AddSquare">
                                                <rect key="frame" x="0.0" y="123" width="124.66666666666667" height="36"/>
                                                <accessibility key="accessibilityConfiguration" identifier="squareButton" label="Add square"/>
                                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                                <state key="normal" title="Square"/>
                                                <connections>
                                                    <action selector="addSquareTapped" destination="R0g-gg-1zB" eventType="touchUpInside" id="NgY-JT-ayl"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7x5-p6-QoI" userLabel="AddCircle">
                                                <rect key="frame" x="124.66666666666666" y="123" width="124.66666666666666" height="36"/>
                                                <accessibility key="accessibilityConfiguration" identifier="circleButton" label="Add circle"/>
                                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                                <state key="normal" title="Circle"/>
                                                <connections>
                                                    <action selector="addCircleTapped" destination="R0g-gg-1zB" eventType="touchUpInside" id="q85-aF-Zdx"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S6g-A7-vEh" userLabel="AddTriangle">
                                                <rect key="frame" x="249.33333333333329" y="123" width="124.66666666666666" height="36"/>
                                                <accessibility key="accessibilityConfiguration" identifier="triangleButton" label="Add triangle"/>
                                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                                <state key="normal" title="Triangle"/>
                                                <connections>
                                                    <action selector="addTriangleTapped" destination="R0g-gg-1zB" eventType="touchUpInside" id="WcZ-5Q-ja1"/>
                                                </connections>
                                            </button>
...
                                <state key="normal" title="Undo"/>
                                <connections>
                                    <action selector="undoTapped" destination="R0g-gg-1zB" eventType="touchUpInside" id="do4-IJ-x5m"/>
                                </connections>
                            </button>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Stats" id="yae-mT-Dbo" userLabel="Stats">
                            <connections>
                                <segue destination="UHq-oR-jZg" kind="show" identifier="StatsViewModel" id="PJy-Gu-dG6"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
